exercies/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2346
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pong-svc
            port:
              number: 2345
